# pia-mpc

./: .editorconfig  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  requirements.txt  vcpkg.json
.devcontainer/: Containerfile  devcontainer.json
config/: compose-2-10.mpc.yaml  compose-2-2.mpc.yaml  compose-2-4.mpc.yaml  compose-2-8.mpc.yaml  compose.yaml  mpc.yaml
config/cuda/: compose.yaml
scripts/: authentication.py  bgv-parameters.py  complexity.py  mac.py  secure-aggregation.py  tables.sh
src/: drowning-bgv.cpp  mac.cpp
src/bench-multiply/: CMakeLists.txt  server.cpp  spdz-server.cpp
src/secure-aggregation/: CMakeLists.txt  client.cpp  common.hpp  offline.cpp  server.cpp  spdz-client.cpp  spdz-common.hpp  spdz-offline.cpp  spdz-server.cpp
